apps/homolog/creator-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: creator-api
  namespace: homolog
  labels:
    app: creator-api
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: creator-api
  template:
    metadata:
      labels:
        app: creator-api
    spec:
      topologySpreadConstraints:                
        - maxSkew: 1                            
          topologyKey: kubernetes.io/hostname   
          whenUnsatisfiable: DoNotSchedule      
          labelSelector:                        
            matchLabels:                      
              app: creator-api 
      containers:
        - name: creator-api
          image: httpd
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
